--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <img src="Images/fire.jpg" alt="Putting out fires since 2000">
   
   <ul>
-      <li><a href="temple1/index.html">Ranch Project</a></li>
+      <li><a href="temple1/index.html">Temple Site</a></li>
       <li>Lesson 2</li>
       <li>Lesson 3</li>
   
