--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   <ul>
       <li><a href="temple1/index.html">Temple Site</a></li>
-      <li>Lesson 2</li>
+      <li a href="water_cycle/index.html">Water Cycle</li>
       <li>Lesson 3</li>
   
   </ul>
