--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   
   <ul>
       <li><a href="temple1/index.html">Temple Site</a></li>
-      <li><a href="water_cycle/index.html">Water Cycle</li>
-      <li>Lesson 3</li>
+      <li><a href="water_cycle/index.html">Water Cycle</a></li>
+      <li><a href="design/index.html">Design</a></li>
   
   </ul>
 </main>
