Updated design project index page

--- a/design/alignment.html
+++ b/design/alignment.html
@@ -30,7 +30,7 @@
 <!-- HEADER HERE -->
 	<header>
         <header class="clearfix">
-        <img src="images/logo.png" alt="logo">
+        <img src="images/logo.png" alt="logo" href="design/index.html">
         <h1>Design Principles</h1>
         <h2>Alec Haws</h2>
     </header>
