--- a/design/index.html
+++ b/design/index.html
@@ -30,7 +30,7 @@
 <!-- HEADER HERE -->
 	<header>
         <header class="clearfix">
-        <img src="images/logo.png" alt="logo">
+        <img src="images/logo.png" alt="logo" href="design/index.html">
  <h1>Design Principles</h1>
         <h2>Alec Haws</h2>
     </header>
@@ -50,8 +50,8 @@
     
 <!-- CONTENT HERE -->
     <main>
-        <h1>Evaporation</h1>
-        <p>Zril salutandi pri et, ex dicat malorum molestiae vim, et inani equidem copiosae qui. Malis electram consequat cu quo, nec elitr libris mediocrem ea. At debitis maluisset adipiscing vel, pri no omnium deterruisset. Nam id sint malis, ei porro doming vel.</p>
+        <h1>Principles of Design</h1>
+        <p>Pick an element from the list above to learn more about the elements of a well-designed web page.</p>
     </main>
     
 <!-- FOOTER HERE -->   
