--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li><a href="temple1/index.html">Temple Site</a></li>
       <li><a href="water_cycle/index.html">Water Cycle</a></li>
       <li><a href="design/index.html">Design</a></li>
-      <li><a href="fixhtml/fixedhtml.html"></a>HTML Fix</li>
+      <li><a href="fixhtml/fixedhtml.html">HTML Fix</a></li>
   
   </ul>
 </main>
