Removed extra header tag and ficed footer for index page.

--- a/design/alignment.html
+++ b/design/alignment.html
@@ -28,9 +28,8 @@
 </head>
 <body>
 <!-- HEADER HERE -->
-	<header>
         <header class="clearfix">
-        <img src="images/logo.png" alt="logo" href="design/index.html">
+        <img src="images/logo.png" alt="logo">
         <h1>Design Principles</h1>
         <h2>Alec Haws</h2>
     </header>
