--- a/design/index.html
+++ b/design/index.html
@@ -28,9 +28,9 @@
 </head>
 <body>
 <!-- HEADER HERE -->
-	<header>
+	
         <header class="clearfix">
-        <img src="images/logo.png" alt="logo" href="design/index.html">
+        <img src="images/logo.png" alt="logo">
  <h1>Design Principles</h1>
         <h2>Alec Haws</h2>
     </header>
@@ -56,7 +56,7 @@
     
 <!-- FOOTER HERE -->   
     <footer>
-        &copy; 201x &bull; Paul Cheney &bull; 123-555-6789
+        &copy; 2019 &bull; Alec Haws &bull; 480-867-5309
     </footer>
 
 </body>
