Added link to Weather Site on portal page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li><a href="water_cycle/index.html">Water Cycle</a></li>
       <li><a href="design/index.html">Design</a></li>
       <li><a href="fixhtml/fixedhtml.html">HTML Fix</a></li>
-  
+      <li><a href="lesson4/index.html">Lesson 4-Weather Site</a></li>
   </ul>
 </main>
 
