--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li><a href="design/index.html">Design</a></li>
       <li><a href="fixhtml/fixedhtml.html">HTML Fix</a></li>
       <li><a href="lesson4/index.html">Lesson 4-Weather Site</a></li>
+      <li><a href="lesson4/Weather Site Proposal.pdf">Lesson 4-Weather Site Planning Document</a></li>
   </ul>
 </main>
 
