--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en-us">
 <head>
 <meta charset="UTF-8">
-<link href="CSS/styles.css" rel="stylesheet">
+<link href="css/normalize.css" rel="stylesheet">
+<link href="css/styles.css" rel="stylesheet">
 <title>Alec Haws: Home</title>
 </head>
 
