Added link to Lesson 5 on portal page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li><a href="fixhtml/fixedhtml.html">HTML Fix</a></li>
       <li><a href="lesson4/index.html">Lesson 4-Weather Site</a></li>
       <li><a href="lesson4/Weather Site Proposal.pdf">Lesson 4-Weather Site Planning Document</a></li>
+      <li><a href="lesson5/index.html">Lesson 5-Weather Site</a></li>
   </ul>
 </main>
 
