--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -49,7 +49,7 @@
     
     
 <!-- CONTENT HERE -->
-    <main>
+    <main class="clearfix">
         <h1>Preston, Idaho</h1>
         <h3>Weather, forecast, and news for Preston, Idaho.</h3>
             <div class="hero">
