--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li><a href="lesson4/Weather Site Proposal.pdf">Lesson 4-Weather Site Planning Document</a></li>
       <li><a href="lesson5/index.html">Lesson 5-Weather Site</a></li>
       <li><a href="lesson6/index.html">Lesson 6-Weather Site</a></li>
-      <li><a href="lesson7/index.html">Lesson 6-Weather Site</a></li>
+      <li><a href="lesson7/preston.html">Lesson 7-Weather Site</a></li>
   </ul>
 </main>
 
