Added Storm Center Form submission page and added page to portal.

--- a/lesson7/preston.html
+++ b/lesson7/preston.html
@@ -36,6 +36,7 @@
                 <h1>GonnaRain?</h1>
                 <h2>Gonna rain? Gotta know.</h2>
             </div>
+            <div></div>
             
     </header>
     
