--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <li><a href="lesson5/index.html">Lesson 5-Weather Site</a></li>
       <li><a href="lesson6/index.html">Lesson 6-Weather Site</a></li>
       <li><a href="lesson7/preston.html">Lesson 7-Weather Site</a></li>
+      <li><a href="lesson8/stormcenter.html">Lesson 8-Weather Site</a></li>
   </ul>
 </main>
 
