Updated form text and submit button text.

--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -58,10 +58,10 @@
 <!-- CONTENT HERE -->
 <main>
 
-<h1>Course Proposal Application</h1>
+<h1>Let Us Know About a Storm in Your Area</h1>
 <form method="get" action="thanks.html">
     <fieldset>
-        <legend>Applicant Information:</legend>
+        <legend>Personal Info: </legend>
         <label class="top">Full Name*<input type="text" name="name" pattern="[a-zA-Z0-9\s]{5,}" required></label>        
         <label class="top">Email*<input type="email" name="email"placeholder="name@example.com" required></label>
         <label class="top">Phone<input type="tel" name="phone" placeholder="1234567" pattern="[0-9]{10}" required></label>
@@ -95,7 +95,7 @@
                     </select>
             </label>   
 
-        <div>User in Danger</div>
+        <div>User in Danger?</div>
             <label class="sbs"><input type="radio" name="danger" value="yes">Yes</label>
             <label class="sbs"><input type="radio" name="danger" value="maybe">Maybe</label>
             <label class="sbs"><input type="radio" name="danger" value="no">No</label>        
@@ -106,7 +106,7 @@
             <input class="comments" type="text" size="30" rows="5">
     </fieldset> 
 
-    <input type="submit" value="Sign me up!" class="submitBtn" onSubmit="thanks.html">
+    <input type="submit" value="Report Storm" class="submitBtn" onSubmit="thanks.html">
 
 
 </form>
