--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <li><a href="lesson6/index.html">Lesson 6-Weather Site</a></li>
       <li><a href="lesson7/preston.html">Lesson 7-Weather Site</a></li>
       <li><a href="lesson8/stormcenter.html">Lesson 8-Weather Site</a></li>
+      <li><a href="lesson9/heroes.html">Lesson 9 Heroes activity</a></li>
   </ul>
 </main>
 
