--- a/lesson9/stormcenter.html
+++ b/lesson9/stormcenter.html
@@ -63,9 +63,9 @@
     <fieldset>
         <legend>Personal Info: </legend>
         <label class="top">Full Name*<input type="text" name="name" pattern="[a-zA-Z0-9\s]{5,}" required></label>        
-        <label class="top">Email*<input type="email" name="email"placeholder="name@example.com" required></label>
+        <label class="top">Email*<input type="email" name="email" placeholder="name@example.com" required></label>
         <label class="top">Phone<input type="tel" name="phone" placeholder="1234567" pattern="[0-9]{10}" required></label>
-        <label class="top">Zip Code<input type="number" name="phone" placeholder="1234567" pattern="[0-9]{5}" required></label>
+        <label class="top">Zip Code<input type="number" name="phone" placeholder="1234567" required></label>
     </fieldset>
 
     <fieldset>
@@ -103,7 +103,7 @@
     
     <fieldset>
         <legend>Additional comments</legend>            
-            <input class="comments" type="text" size="30" rows="5">
+            <input class="comments" type="text" size="30">
     </fieldset> 
 
     <input type="submit" value="Report Storm" class="submitBtn" onSubmit="thanks.html">
