Added lesson10 link to portal page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <li><a href="lesson8/stormcenter.html">Lesson 8-Weather Site</a></li>
       <li><a href="lesson9/heroes.html">Lesson 9 Heroes activity</a></li>
       <li><a href="lesson9/index.html">Lesson 9 Heroes activity</a></li>
+      <li><a href="lesson10/index.html">Lesson 10 Weather Site (Pre-API)</a></li>
   </ul>
 </main>
 
