--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <li><a href="lesson9/heroes.html">Lesson 9 Heroes activity</a></li>
       <li><a href="lesson9/index.html">Lesson 9 Heroes activity</a></li>
       <li><a href="lesson10/index.html">Lesson 10 Weather Site (Pre-API)</a></li>
+      <li><a href="lesson10/preston.html">Lesson 10 Weather Site (Preston page with API integration)</a></li>
   </ul>
 </main>
 
