--- a/lesson10/preston.html
+++ b/lesson10/preston.html
@@ -13,6 +13,7 @@
 
 
 <!-- STYLE SHEETS -->
+<link rel="icon" href="images/logo.png">
 <link href="css/normalize.css" rel="stylesheet">
 <!-- phone-default -->
 <link href="css/small.css" rel="stylesheet">
@@ -30,7 +31,7 @@
 	
         <header class="clearfix">
             <div>
-                 <img src="images/logo.png" alt="logo">        
+                 <img src="images/logo.png" alt="logo" href="index.html">        
             </div>
             <div>        
                 <h1>GonnaRain?</h1>
@@ -83,7 +84,9 @@
                 </section>
             </div>
             <script src="scripts/openWeather.js"></script>
-        <h2 class="fiveday">Five Day Forecast Details:</h2>
+        <div class="fiveday">
+            <h2 class="fiveday">Five Day Forecast Details:</h2>
+            
             <table>
                 <tr>
                     <th>Day</th>
@@ -122,7 +125,7 @@
                     <td>Northwest 10mph</td>
                 </tr>
             </table>
-
+            </div>
 
         <h2 class="thisday">This day in history...</h2>
             <img class="snowman"
