Spelling and Grammar check

--- a/weathersitefinal/fishhaven.html
+++ b/weathersitefinal/fishhaven.html
@@ -141,7 +141,7 @@
             sizes="40vw"
             src="images/fishHavenFoodLarge.jpg"
             alt="snowman">
-        <p>On this day in 1987, one of the most popular restarauunts in Fish Haven opened its doors fore the first time. LaBeau's is one of the most popular destinations in all of Fish Haven. They serve traditional American food including hamburgers, frenchg fries, and hot dogs. However, the menu item that they are most known for is their Raspberry shake.</p>
+        <p>On this day in 1987, one of the most popular restarauunts in Fish Haven opened its doors fore the first time. LaBeau's is one of the most popular destinations in all of Fish Haven. They serve traditional American food including hamburgers, french fries, and hot dogs. However, the menu item that they are most known for is their Raspberry shake.</p>
         <p>On the first day that LaBeau's was open, they sold out of all of their food before dinner time. From that first day on it was evident that they would become a staple of Summertime tradition for both the visitors and the residents of Fish Haven.</p>
     </main>
     
