--- a/weathersitefinal/sodasprings.html
+++ b/weathersitefinal/sodasprings.html
@@ -144,7 +144,7 @@
             src="images/sodaSpringsLarge.jpg"
             alt="snowman">
         <p>On this day in history in 2008 Soda Springs celebrated the 150th anniversary of its founding. The town was named because of the natrally ocurring springs of carbonbated waters that are found in the town and in the surrounding areas. The town is also home to the Soda Springs Geyser which is one of the most popular attractions to the town. The geyser is also the worlds only captive geyser in the world. It is released every hour. Soda Springs is a small town with a big personality! </p>
-        <p>On this day the Soda Springs geysr was also found (or created depending on who you ask). Members of the town were drilling in hopes of finding a natural source of hot water that could be used for a swimming pool. Rather than finding a hot spring, they opened the source for the Soda Springs geyser and it became one of the landmarks of the town.</p>
+        <p>On this day the Soda Springs geyser was also found (or created depending on who you ask). Members of the town were drilling in hopes of finding a natural source of hot water that could be used for a swimming pool. Rather than finding a hot spring, they opened the source for the Soda Springs geyser and it became one of the landmarks of the town.</p>
     </main>
     
 <!-- FOOTER HERE -->   
