--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <li><a href="lesson10/index.html">Lesson 10 Weather Site (Pre-API)</a></li>
       <li><a href="lesson10/preston.html">Lesson 10 Weather Site (Preston page with API integration)</a></li>
       <li><a href="weathersitefinal/index.html">Weather  Site Final Version</a></li>
+      <li><a href="templeinn/index.html">Temple Inn and Suites Final Project</a></li>
   </ul>
 </main>
 
