layout and color adjustments for body and footer

--- a/templeinn/index.html
+++ b/templeinn/index.html
@@ -84,6 +84,10 @@
         <p>Address <br>Temple View Inn and Suites<br>1830 North Temple Blvd<br>Rexburg, Idaho 83440</p>
         <a href="https://www.google.com/travel/hotels/Rexburg/entity/CgsI34vs79Xy58-QARAB/location?g2lb=4207876%2C4208993%2C4223281%2C4240602%2C4242898%2C4248641%2C4251623%2C4240902%2C4250437&hl=en&gl=us&un=0&q=hotel%20near%20rexburg%20temple&rp=OAJAAEgC&ictx=1&ved=0CIQBEKjgAigEahcKEwiY5qSa4MPhAhUAAAAAHQAAAAAQAQ&hrf=CgUIlgEQACIDVVNEKhYKBwjjDxAEGBISBwjjDxAEGBMYASgAsAEBmgEJEgdSZXhidXJnogETCggvbS8wczJicRIHUmV4YnVyZ5IBAiAB&tcfs=Ei0KCC9tLzBzMmJxEgdSZXhidXJnGhgKCjIwMTktMDQtMTgSCjIwMTktMDQtMTlSAA"> <img src="images/map.jpg" alt="location"></a>
     </article>
+
+    <article class="article2">
+        <h1>The Rexburg, Idaho Temple</h1>
+    </article>        
     </div>
 </main>
 
