--- a/templeinn/thanks.html
+++ b/templeinn/thanks.html
@@ -52,8 +52,8 @@
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="primaryNav" class="hide">
             <li><a href="index.html">Home</a></li>
-            <li><a href="temples.html">Temples</a></li>
-            <li><a href="reservations.html">Reservations</a></li>            
+            <li class="active"><a href="reservations.html">Reservations</a></li>
+            <li><a href="temples.html">Temples</a></li>                        
             <li><a href="services.html">Services</a></li>
             <li><a href=contactus.html>Contact Us</a></li>
         </ul>
