Speel Check and Consistency check

--- a/templeinn/fulltimemissionaries.html
+++ b/templeinn/fulltimemissionaries.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Temple Inn and Suites - Rexburg, Idaho">
+<meta name="description" content="Temple View Inn and Suites - Rexburg, Idaho">
 <meta name="author" content="Alec Haws">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>Temple Inn and Suites</title>
+<title>Temple View Inn and Suites</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -37,8 +37,8 @@
                 </div>
                         
                <div>
-                    <h1>Temple Inn & Suites</h1>
-                    <h2>Rexburg's premiere hotel destnation</h2>
+                    <h1>Temple View Inn & Suites</h1>
+                    <h2>Rexburg's premiere hotel destination</h2>
                </div>
                 
             </div>           
@@ -63,9 +63,9 @@
 <!-- CONTENT HERE -->
 <main>
     <h1>Full-Time Missionary Housing</h1>
-    <p>Temple Inn & Suites is proud to offer long-term housing solutions for Full-Time temple missionaries. Our suites come equipped with a king sized bed, a full kitchen, and on-site laundry facilities.</p>
-    <p>We also offer special ammenities such as a shuttle that provides transportation to the temple in coordination with normal shift rotations for the missionaries.</p>
-    <h3>Please contact our missionary coordinators for assistance in answering questions and with reserving a suite for your misssion.</h3>
+    <p>Temple View Inn & Suites is proud to offer long-term housing solutions for Full-Time temple missionaries. Our suites come equipped with a king-sized bed, a full kitchen, and on-site laundry facilities.</p>
+    <p>We also offer special amenities such as a shuttle that provides transportation to the temple in coordination with normal shift rotations for the missionaries.</p>
+    <h3>Please contact our missionary coordinators for assistance in answering questions and with reserving a suite for your mission.</h3>
     <h3>Phone: (208) 345-7677 Email: missionsuites@templeview.com</h3>
 <div class="missionsuite">
     <figure>
