--- a/templeinn/index.html
+++ b/templeinn/index.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Temple Inn and Suites - Rexburg, Idaho">
+<meta name="description" content="Temple View Inn and Suites - Rexburg, Idaho">
 <meta name="author" content="Alec Haws">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>Temple Inn and Suites</title>
+<title>Temple View Inn and Suites</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -37,8 +37,8 @@
                 </div>
                         
                <div>
-                    <h1>Temple Inn & Suites</h1>
-                    <h2>Rexburg's premiere hotel destnation</h2>
+                    <h1>Temple View Inn & Suites</h1>
+                    <h2>Rexburg's premiere hotel destination</h2>
                </div>
                 
             </div>           
@@ -69,7 +69,7 @@
     </div>
     <div class= "mainpage">
     <article class="article0">
-        <h1 class="texttop">Welcome to Temple Inn & Suites</h1>
+        <h1 class="texttop">Welcome to Temple View Inn & Suites</h1>
         <h2 class="text1">A home away from home for visitors and temple patrons alike.</h2>
 
         <h3 class="text2">Come and stay with us!</h3>
@@ -98,7 +98,7 @@
         <img src="images/rexburgtemple.jpg" alt="Rexburg, Idaho Temple">
         <img src="images/rexburgtemple02.jpg" alt="Rexburg, Idaho Temple">
         <img src="images/rexburgtemple03.jpg" alt="Rexburg, Idaho Temple">
-        <p>Latter-day Saints first began to settle the Upper Snake River Valley in 1879, following the completion of the Utah Northern Railroad. By 1883, under the direction of Thomas E. Ricks, the city of Rexburg was established, and just a year after that, Idaho's second stake—the Bannock Stake—was organized with headquarters in Rexburg. As was tradition at the time, a stake academy was also founded in 1888: the Bannock Stake Academy. And by 1923, the school had matured into a junior college, named Ricks College after Rexburg's founder.
+        <p>Latter-day Saints first began to settle the Upper Snake River Valley in 1879, following the completion of the Utah Northern Railroad. By 1883, under the direction of Thomas E. Ricks, the city of Rexburg was established, and just a year after that, Idaho's second stake—the Bannock Stake—was organized with headquarters in Rexburg. As was tradition at the time, a stake academy was also founded in 1888: The Bannock Stake Academy. And by 1923, the school had matured into a junior college, named Ricks College after Rexburg's founder.
 
         In June 2000, Rexburg received a major announcement from the Church that two-year Ricks College would become four-year Brigham Young University–Idaho by fall 2001. New construction gripped the quiet farming community as housing complexes seemed to appear overnight. By the end of 2003, the First Presidency made a second major announcement: Idaho's third temple would be built in Rexburg. Rexburg became Idaho's fastest growing city as its 17,500 residents in 2000 multiplied to 28,000 by the time the temple was dedicated in 2008.</p>
     </article>
