--- a/templeinn/reservations.html
+++ b/templeinn/reservations.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Temple Inn and Suites - Rexburg, Idaho">
+<meta name="description" content="Temple View Inn and Suites - Rexburg, Idaho">
 <meta name="author" content="Alec Haws">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>Temple Inn and Suites- Reservations</title>
+<title>Temple View Inn and Suites- Reservations</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -36,8 +36,8 @@
                 </div>
                         
                <div>
-                    <h1>Temple Inn & Suites</h1>
-                    <h2>Rexburg's premiere hotel destnation</h2>
+                    <h1>Temple View Inn & Suites</h1>
+                    <h2>Rexburg's premiere hotel destination</h2>
                </div>
                 
             </div>           
@@ -83,12 +83,12 @@
                     <label class="top">Select Hotel:
                             <select name="subject">
                                 <option value="">Select hotel...</option>
-                                <option value="belmont">Temple Inn & Suites: Belmont, Massachusettes</option>
-                                <option value="cedarCity">Temple Inn & Suites: Cedar City, Utah</option>
-                                <option value="dallas">Temple Inn & Suites: Dallas, Texas</option>
-                                <option value="mesa">Temple Inn & Suites: Mesa, Arizona</option>
-                                <option value="rexburg">Temple Inn & Suites: Rexburg, Idaho</option>
-                                <option value="spring">Temple Inn & Suites: Spring, Texas</option>
+                                <option value="belmont">Temple View Inn & Suites: Belmont, Massachusettes</option>
+                                <option value="cedarCity">Temple View Inn & Suites: Cedar City, Utah</option>
+                                <option value="dallas">Temple View Inn & Suites: Dallas, Texas</option>
+                                <option value="mesa">Temple View Inn & Suites: Mesa, Arizona</option>
+                                <option value="rexburg">Temple View Inn & Suites: Rexburg, Idaho</option>
+                                <option value="spring">Temple View Inn & Suites: Spring, Texas</option>
                             </select>
                     </label>
                 <div>How many beds do you need?</div>
