--- a/templeinn/services.html
+++ b/templeinn/services.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Temple Inn and Suites - Rexburg, Idaho">
+<meta name="description" content="Temple View Inn and Suites - Rexburg, Idaho">
 <meta name="author" content="Alec Haws">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>Temple Inn and Suites- Services</title>
+<title>Temple View Inn and Suites- Services</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -35,8 +35,8 @@
                     <a href="index.html"><img src="images/logo.png" alt="logo"></a>   
                 </div>                        
                <div>
-                    <h1>Temple Inn & Suites</h1>
-                    <h2>Rexburg's premiere hotel destnation</h2>
+                    <h1>Temple View Inn & Suites</h1>
+                    <h2>Rexburg's premiere hotel destination</h2>
                </div>
             </div>
         </header>
@@ -60,29 +60,29 @@
     <div class="servicesflex">
         <section class="servicestop">
             <h1>Services</h1>
-            <h2>At Temple Inn & Suites, we offer more than just short term lodging. Below is a comprehensive list of the services and ammenities that we offer at each of our hotels.</h2>
+            <h2>At Temple View Inn & Suites, we offer more than just short-term lodging. Below is a comprehensive list of the services and amenities that we offer at each of our hotels.</h2>
             <ul>
                 <li>Complimentary Amenities for our guests:</li>
                 <ul>
                     <li>Continental Breakfast (served from 5:00AM to 10:00AM every morning)</li>
                     <li>Indoor pool</li>
                     <li>Exercise Room</li>
-                    <li>High-speed wireledd internet access</li>
+                    <li>High-speed wireless internet access</li>
                     <li>Smart TVs in every guest room</li>
                     <li>Parking (free for guests)</li>
                     <li>Shuttle service to the temple</li>
                     <li>Family History consultation services and Ordinance card services</li>
                 </ul>
-                <li>Specialized Services for temple patrons and othger guests:</li>
+                <li>Specialized Services for temple patrons and other guests:</li>
                 <ul>
-                    <li>Free chganging rooms and restroom access for temple patrons</li>
+                    <li>Free changing rooms and restroom access for temple patrons</li>
                     <li>A playroom and low-cost, short-term child care services for the children of temple patrons</li>
                     <li>Long-term stay accommodation suites for full-time temple missionaries</li>
                     <ul>
                             <li>See full-time missionary page (link below) for more information on housing options for missionaries</li>
                         </ul>
                     <li>temple history themed reception and sitting area</li>
-                    <li>A hall that can be used for wedding receptions (can be customized with our food menu, or with access to our kitchen for food prepparation)</li>
+                    <li>A hall that can be used for wedding receptions (can be customized with our food menu, or with access to our kitchen for food preparation)</li>
                     <ul>
                         <li>See wedding page (link below) for more information on wedding reception options</li>
                     </ul>
@@ -99,7 +99,7 @@
                     <ul>
                         <li>Wedding Receptions</li>
                         <li>Reception planning services</li>
-                        <li>Food planning and prepparation services</li>
+                        <li>Food planning and preparation services</li>
                     </ul>
                 </article>
             </a>
@@ -109,7 +109,7 @@
                 <article>
                     <h1>Full-Time Missionaries</h1>
                     <img src="images/seniormissionaries.jpg" alt="senior missionary couple">
-                    <h3>Information about the followiung services for full-time temple missionaries:</h3>
+                    <h3>Information about the following services for full-time temple missionaries:</h3>
                     <ul>
                         <li>Long-term housing</li>
                         <li>Transportation services</li>
