--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Temple Inn and Suites - Rexburg, Idaho">
+<meta name="description" content="Temple View Inn and Suites - Rexburg, Idaho">
 <meta name="author" content="Alec Haws">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>Temple Inn and Suites- Temple Information</title>
+<title>Temple View Inn and Suites- Temple Information</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -37,8 +37,8 @@
                 </div>
                         
                <div>
-                    <h1>Temple Inn & Suites</h1>
-                    <h2>Rexburg's premiere hotel destnation</h2>
+                    <h1>Temple View Inn & Suites</h1>
+                    <h2>Rexburg's premiere hotel destination</h2>
                </div>
                 
             </div>           
