--- a/templeinn/weddingreceptions.html
+++ b/templeinn/weddingreceptions.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Temple Inn and Suites - Rexburg, Idaho">
+<meta name="description" content="Temple View Inn and Suites - Rexburg, Idaho">
 <meta name="author" content="Alec Haws">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>Temple Inn and Suites- Wedding Reception Information</title>
+<title>Temple View Inn and Suites- Wedding Reception Information</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -37,8 +37,8 @@
                 </div>
                         
                <div>
-                    <h1>Temple Inn & Suites</h1>
-                    <h2>Rexburg's premiere hotel destnation</h2>
+                    <h1>Temple View Inn & Suites</h1>
+                    <h2>Rexburg's premiere hotel destination</h2>
                </div>
                 
             </div>           
@@ -64,8 +64,8 @@
 <main>
    <div class="weddingflex">
         <section>
-            <h1>Temple Inn & Suites Reception Hall</h1>
-            <p>At Temple Inn & Suites, we know that it can be difficult to find a venue for a wedding reception that is in a convenient location. This is why we have a full-service reception hall  located at each one of our hotels. We offer venue services, catering services, and setup services as well. Each reception can be tailored to meet your exact wants and needs.
+            <h1>Temple View Inn & Suites Reception Hall</h1>
+            <p>At Temple View Inn & Suites, we know that it can be difficult to find a venue for a wedding reception that is in a convenient location. This is why we have a full-service reception hall located at each one of our hotels. We offer venue services, catering services, and setup services as well. Each reception can be tailored to meet your exact wants and needs.
             </p>
         </section>
         <section>
@@ -80,7 +80,7 @@
             </article>
             <article  class="reception">
                 <img src="images/food2.jpg" alt="kitchen staff">
-                <p>Our event staff can handle as much or as little of the background work as you would like. They can handle all of the setup and takledown work while you man the kitchen, they can take care of everything, or they can just be there to help clean up at the end of the night.</p>
+                <p>Our event staff can handle as much or as little of the background work as you would like. They can handle all of the setup and takedown work while you man the kitchen, they can take care of everything, or they can just be there to help clean up at the end of the night.</p>
             </article>
         </section>
 
