--- a/templeinn/contactus.html
+++ b/templeinn/contactus.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Temple Inn and Suites - Rexburg, Idaho">
+<meta name="description" content="Temple View Inn and Suites - Rexburg, Idaho">
 <meta name="author" content="Alec Haws">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>Temple Inn and Suites</title>
+<title>Temple View Inn and Suites</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -37,8 +37,8 @@
                 </div>
                         
                <div>
-                    <h1>Temple Inn & Suites</h1>
-                    <h2>Rexburg's premiere hotel destnation</h2>
+                    <h1>Temple View Inn & Suites</h1>
+                    <h2>Rexburg's premiere hotel destination</h2>
                </div>
                 
             </div>           
@@ -68,7 +68,7 @@
         <h1>Contact us:</h1>
         <h3>Please feel free to reach out to us to let us know how we are doing!</h3>
         <p>Phone: (866) 423-1830</p>
-        <p>Email: contact@templeinnandsuites.com</p>
+        <p>Email: contact@templeviewinnandsuites.com</p>
         <p>Address:<br>4800 Montgomery Ln #300<br>Bethesda,MD 20814</p>
 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.404837028582!2d-77.09772048413616!3d38.98325594948262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97b6b3b5b43%3A0x9c8eb1c5547b83eb!2s4800+Montgomery+Ln+%23300%2C+Bethesda%2C+MD+20814!5e0!3m2!1sen!2sus!4v1554956505538!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
