--- a/templeinn/reservations.html
+++ b/templeinn/reservations.html
@@ -61,7 +61,7 @@
     
 <!-- CONTENT HERE -->
 <main>
-        <h1>Book your stay at Temnple Inn & Suites</h1>
+        <h1>Book your stay at Temple Inn & Suites</h1>
         <form method="get" action="thanks.html">
             <fieldset>
                 <legend>Personal Info: </legend>
